--- a/app/assets/stylesheets/theme/variables.css.less
+++ b/app/assets/stylesheets/theme/variables.css.less
@@ -41,7 +41,8 @@
   padding-right:@leftColumnOffset;
 }
 .modal-video() {
-  max-height:initial;
+  max-height:600px;
+  overflow:visible;
 
   .modal-video {
     position:relative;
